--- a/PacmanForms/PacmanForms/PacmanForms.csproj
+++ b/PacmanForms/PacmanForms/PacmanForms.csproj
@@ -88,6 +88,24 @@
   <ItemGroup>
     <None Include="Resources\Pacman_Closed.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pacman_pic2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\New Piskel.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_0.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_3.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
