--- a/PacmanForms/WindowsFormsApplication1/PC3.csproj
+++ b/PacmanForms/WindowsFormsApplication1/PC3.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{41F5C07E-D8FE-46CE-9FB8-083F146162AA}</ProjectGuid>
+    <ProjectGuid>{825BA345-E913-4B66-9245-68A911510142}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Pacman_Lab</RootNamespace>
-    <AssemblyName>Pacman_Lab</AssemblyName>
+    <RootNamespace>WindowsFormsApplication1</RootNamespace>
+    <AssemblyName>WindowsFormsApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -66,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -79,6 +79,39 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\coin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\New Piskel.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pacman_Closed.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pacman_pic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pacman_pic2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_0.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sprite_3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TestIMG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ss.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
